attempting ma text alignment bug

--- a/css/main.css
+++ b/css/main.css
@@ -627,7 +627,7 @@ body, html{
 #massachusetts-title-container{
     width: 100% !important;
     left: 0 !important;
-    text-align: center;
+    margin: 0 !important;
 }
 #we-are-option-button-container:hover{
     color: red;
